--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,1 @@
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DATABASE=poc_ts_db
-
-JWT_SECRET=top_secret
-
-DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
+DATABASE_URL="postgresql://${usertop}:${senhatop}@${hosttop}:${port_top}/${databasenametop}?schema=public"
