--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:seed":"npx prisma db seed"
+  },
+  "prisma":{
+    "seed":"ts-node prisma/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -27,9 +31,11 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@prisma/client": "^4.9.0",
     "@types/express": "^4.17.15",
     "@types/pg": "^8.6.6",
     "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
